# codex-workspace-sync

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  operations.md  protocol.md
scripts/server/: backup_live_state.sh  github.env.template  install_systemd.sh  install_update_command.sh  run-server.sh  service.env.template  update_from_github.sh
scripts/server/systemd/: codex-workspace-sync-update.service  codex-workspace-sync-update.timer  codex-workspace-sync.service
scripts/windows/: cws-enroll-device.bat  cws-shell.bat  pull-repo.bat  push-config.example.cmd  push-repo.bat
skills/shared/: README.md
skills/shared/workspace-sync-operator/: SKILL.md
src/cws/: __init__.py  __main__.py  cli.py  config.py  models.py  secrets.py  shell.py  utils.py
src/cws/client/: __init__.py  api.py  codex.py  github.py  state.py  sync.py
src/cws/server/: __init__.py  app.py  bootstrap.py  db.py  security.py  service.py
src/cws/templates/baseline/: base_rules.md.tmpl
src/cws/templates/ecosystem/: sibling_repos.md.tmpl
src/cws/templates/subproject/: rules.md.tmpl
tests/: test_client_enrollment.py  test_codex_artifacts.py  test_export_github_tree.py  test_server_app.py  test_server_service.py  test_shell.py
tools/: export_github_tree.py
